--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -15,6 +15,10 @@
             playGame('Scissors');
         ">Scissors</button>
 
+        <p class="js-result"></p>
+        <p class="js-moves"></p>
+        <p class="js-score">Wins: 0, Losses: 0, Ties: 0</p>
+
         <button onclick="
             resetScore();
         ">Reset Score</button>
@@ -31,6 +35,10 @@
                 score.wins = 0;
                 score.loses = 0;
                 score.ties = 0;
+
+                document.querySelector('.js-score').innerHTML = `Wins: ${score.wins}, Losses: ${score.loses}, Ties: ${score.ties}`;
+                document.querySelector('.js-result').innerHTML = '';
+                document.querySelector('.js-moves').innerHTML = '';
 
                 localStorage.removeItem('message');
             }
@@ -79,8 +87,9 @@
 
                 localStorage.setItem('message', JSON.stringify(score));
 
-                alert(`You picked ${playerMove}. Computer picked ${computerMove}. You ${result}.
-Wins: ${score.wins}, Losses: ${score.loses}, Ties: ${score.ties}`);
+                document.querySelector('.js-moves').innerHTML = `You ${playerMove} - ${computerMove} Computer`;
+                document.querySelector('.js-result').innerHTML = `You ${result}`;
+                document.querySelector('.js-score').innerHTML = `Wins: ${score.wins}, Losses: ${score.loses}, Ties: ${score.ties}`;
             }
 
             function generateComputerMove(){
