--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -1,115 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="rock-paper-scissors.css">
+    </head>
     <body>
-        <p>Rock Paper Scissors</p>
-        <button onclick="
-            playGame('Rock');
-        ">Rock</button>
+        <p class="title">Rock Paper Scissors</p>
+        <button class="move-btn js-rock-btn">
+            <img src="rock-emoji.png" class="move-img">
+        </button>
 
-        <button onclick="
-            playGame('Paper');
-        ">Paper</button>
+        <button class="move-btn js-paper-btn">
+            <img src="paper-emoji.png" class="move-img">
+        </button>
 
-        <button onclick="
-            playGame('Scissors');
-        ">Scissors</button>
+        <button class="move-btn js-scissors-btn">
+            <img src="scissors-emoji.png" class="move-img">
+        </button>
 
-        <p class="js-result"></p>
-        <p class="js-moves"></p>
-        <p class="js-score">Wins: 0, Losses: 0, Ties: 0</p>
+        <p class="js-result result"></p>
+        <p class="js-moves moves"></p>
+        <p class="js-score score"></p>
 
-        <button onclick="
-            resetScore();
-        ">Reset Score</button>
+        <button class="reset-btn js-reset-btn">Reset Score</button>
 
-        <script>
+        <button class="autoplay-btn js-autoplay-btn">Auto Play</button>
 
-            let score  = JSON.parse(localStorage.getItem('message')) || {
-                wins: 0,
-                loses: 0,
-                ties: 0
-            };
+        <script src="rock-paper-scissors.js"></script>
 
-            document.querySelector('.js-score').innerHTML = `Wins: ${score.wins}, Losses: ${score.loses}, Ties: ${score.ties}`;
-            document.querySelector('.js-result').innerHTML = '';
-            document.querySelector('.js-moves').innerHTML = '';
+        <p class="confirmationMessage js-confirmationMessage"></p>
 
-            function resetScore(){
-                score.wins = 0;
-                score.loses = 0;
-                score.ties = 0;
-
-                document.querySelector('.js-score').innerHTML = `Wins: ${score.wins}, Losses: ${score.loses}, Ties: ${score.ties}`;
-                document.querySelector('.js-result').innerHTML = '';
-                document.querySelector('.js-moves').innerHTML = '';
-
-                localStorage.removeItem('message');
-            }
-
-            function playGame(playerMove){
-
-                const computerMove = generateComputerMove();
-
-                let result = '';
-
-                if(playerMove === 'Rock'){
-                    if(computerMove === 'Rock'){
-                        result = 'Tie';
-                    } else if (computerMove === 'Paper'){
-                        result = 'Lose';
-                    } else{
-                        result = 'Win';
-                    }
-
-                } else if (playerMove === 'Scissors'){
-                    if(computerMove === 'Rock'){
-                        result = 'Lose';
-                    } else if (computerMove === 'Paper'){
-                        result = 'Win';
-                    } else{
-                        result = 'Tie';
-                    }
-
-                } else if (playerMove === 'Paper'){
-                    if(computerMove === 'Rock'){
-                        result = 'Win';
-                    } else if (computerMove === 'Paper'){
-                        result = 'Tie';
-                    } else{
-                        result = 'Lose';
-                    }
-                }
-
-                if(result === 'Win'){
-                    score.wins ++;
-                } else if(result === 'Tie'){
-                    score.ties ++;
-                } else if(result === 'Lose'){
-                    score.loses ++;
-                }
-
-                localStorage.setItem('message', JSON.stringify(score));
-
-                document.querySelector('.js-moves').innerHTML = `You ${playerMove} - ${computerMove} Computer`;
-                document.querySelector('.js-result').innerHTML = `You ${result}`;
-                document.querySelector('.js-score').innerHTML = `Wins: ${score.wins}, Losses: ${score.loses}, Ties: ${score.ties}`;
-            }
-
-            function generateComputerMove(){
-                const randomNumber = Math.random();
-                let computerMove = '';
-
-                if(randomNumber>=0 && randomNumber<1/3){
-                    computerMove = 'Rock';
-                } else if (randomNumber>=1/3 && randomNumber<2/3){
-                    computerMove = 'Paper';
-                } else if (randomNumber>=2/3 && randomNumber<1){
-                    computerMove = 'Scissors';
-                }
-
-                return computerMove;
-            }
-        </script>
     </body>
 </html>
